[package]
name = "shreds"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = "3.2.23"
env_logger = "0.11.5"
log = "0.4.22"
reed-solomon-erasure = "6.0.0"
serde = "1.0.208"
serde_json = "1.0.125"
solana-entry = "=1.16.27"
solana-ledger = "=1.16.27"
solana-program = "=1.16.27"
solana-sdk = "=1.16.27"
timed = "0.2.1"
tokio = { version = "1.39.2", features = ["full"] }
raydium_amm = { version = "0.3.0", git = "https://github.com/raydium-io/raydium-amm" }
anchor-lang = "=0.29.0"
anchor-client = "=0.29.0"
